tests/macros/tests/ui/err/short-name-is-not-bool.stderr
error: expected boolean literal
 --> tests/ui/err/short-name-is-not-bool.rs:3:22
  |
3 | #[trace(short_name = "true")]
  |                      ^^^^^^
