tests/macros/tests/ui/err/short-name-is-not-bool.rs
use fastrace::trace;

#[trace(short_name = "true")]
fn f() {}

fn main() {}
